--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
   <h1 class="header--main">Discover hidden places in the world around you</h1>
   <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-  <video autoplay muted loop>
-      <source src="resources/videos/excursion.mp4" type="video/mp4">
+  <video autoplay loop>
+      <source src="excursion.mp4" type="video/mp4">
   </video>
   <h2 class="header--secondary">Your personal travel guide</h2>
   <h4 class="header--subheader">Excursion remembers places you like, 
       and recommend new points of interest to you.</h4>
+  <p><img src="camp.webp"></p>
+  <p><img src="phone.webp"></p>
 
   </body>
   </html>
