Added footer text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       and recommend new points of interest to you.</h4>
   <p><img src="camp.webp"></p>
   <p><img src="phone.webp"></p>
+  <h4 class="header--subheader">Coming Soon for iPhone and Android</h4>
+  <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>g
 
   </body>
   </html>
